# MyWBooks-

./: .gitignore  Procfile  README.md  pyproject.toml  pytest.ini
examples/: Netherwitch  Netherwitch - 41 _ Patreon.html  Netherwitch - 42 _ Patreon.html  Untouchable_chapter-5.html  list_all.py  patreon_test.py  rr_from_url.py  rr_test_nr1.py  user_test.py
src/my_wbooks/: __init__.py  book.py  config.py  download_manager.py  ebook_generator.py  patreon.py  royalroad.py  utils.py
src/my_wbooks_api/: routes.py
src/mywbooks/: auth.py  book.py  book_ops.py  config.py  db.py  db_rr_book.py  download_manager.py  ebook_generator.py  factories.py  ingest.py  library.py  models.py  patreon.py  queue.py  royalroad.py  task_cleanup.py  tasks.py  utils.py  web_book.py
src/mywbooks/api/: app.py  auth.py
src/mywbooks/api/routers/: books.py  tasks.py
src/mywbooks/api/routes/: books.py
src/mywbooks/maintenance/: cleanup.py
src/mywbooks/providers/: __init__.py  base.py  royalroad.py
src/mywbooks/services/: book_ops.py  ingest.py
src/mywbooks/wbooks/: wbook.py
tests/: conftest.py  fakes.py  test_api_books.py  test_chapter_content.py  test_chapter_extractor.py  test_download_manager.py  test_ebook_generator_offline.py  test_epub_smoke.py  test_rr_chapter_extractor.py  test_rr_fiction_parsing.py  test_rr_webbook.py
tools/: get_token.py  test_me.py
